# jira_report_generator

./: .gitignore  README.md  pyproject.toml
.zed/: debug.json
jira_report_generator/: main.py
